# sudhanshu-tradingagent

./: README.md  todo.md
client/web/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  vite.config.ts
client/web/src/: App.tsx  index.css
client/web/src/components/: AgentCard.tsx  AgentSidebar.tsx  ChatMessage.tsx  ProtectedRoute.tsx  RegisterForm.tsx  TradingAnalysisDisplay.tsx
client/web/src/pages/: Landing.tsx  Playground.tsx
client/web/src/store/: authStore.ts
deliverables/: README.md  week1_videolink.txt
product/: arch.md  product.md
server/: .gitignore  adk-web-wrapper.sh  main.py  orchestrator.py  populate_stocks.py  pyproject.toml  run_adk_web.py  start_adk.sh  test_agents.py
server/agent/: README.md  __init__.py  agent.py  agent_registry.py  agent_wrapper.py  coordinator_agent.py  dummy.py  recommendation_agent.py  visualizer_agent.py
server/api/: auth.py  chat.py
server/core/: config.py  security.py
server/db/: db.py
server/model/: model.py
server/schemas/: chat_schema.py  user_schema.py
server/screener_agent/: __init__.py  agent.py  screener_agent.py
server/service/: auth_service.py  chat_service.py  stock_data_service.py
server/test/: README.md  run_tests.py
server/test/service/: test_auth_service.py
server/test/trader_agent/agents/utils/: test_historical.py  test_indicators.py  test_integration.py  test_scoring.py  test_ticker_resolution.py
server/tools/: mcp_server.py
server/trader_agent/: __init__.py  coordinator_agent.py
server/trader_agent/agents/: __init__.py
server/trader_agent/agents/.cache/: test_key.json
server/trader_agent/agents/analysts/: __init__.py  fundamentals_agent.py  news_agent.py  sentiment_agent.py  technical_agent.py  ticker_agent.py
server/trader_agent/agents/manager/: __init__.py  research_manager.py
server/trader_agent/agents/researchers/: __init__.py  researcher_bear.py  researcher_bull.py
server/trader_agent/agents/trader/: __init__.py  trader_agent.py
server/trader_agent/agents/utils/: __init__.py  http.py  indicators.py  nasdaq_api.py  scoring.py  test_historical.py  test_indicators.py  test_integration.py  test_scoring.py  test_ticker_resolution.py  validate_flow.py
(+3 files in other folders)
